force-app/main/default/objects/Hostel_Fee__c/Hostel_Fee__c.object-meta.xml
<CustomObject>
    <label>Hostel Fee</label>
    <nameField>
        <label>Hostel Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hostel Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>