force-app/main/default/objects/Hostel_Fee__c/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <label>Academic Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I Year</fullName>
            </value>
            <value>
                <fullName>II Year</fullName>
            </value>
            <value>
                <fullName>III Year</fullName>
            </value>
            <value>
                <fullName>IV Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>