force-app/main/default/objects/Hostel_Fee__c/fields/Balance_Formula__c.field-meta.xml
<CustomField>
    <fullName>Balance_Formula__c</fullName>
    <label>Balance	Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>