force-app/main/default/objects/Hostel_Fee__c/fields/Paid_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Paid_Percentage__c</fullName>
    <formula>IF(
Total_Fee__c &gt; 0,
Paid_Amount__c / Total_Fee__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>