force-app/main/default/objects/Hostel_Fee__c/fields/Payment_Progress__c.field-meta.xml
<CustomField>
    <fullName>Payment_Progress__c</fullName>
    <formula>IF(
Balance__c = 0,
&quot;Fully Paid&quot;,
IF(
Paid_Amount__c = 0,
&quot;Not Paid&quot;,
&quot;Partially Paid&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Progress</label>
    <type>Text</type>
</CustomField>